--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     api 'com.amap.api:location:latest.integration'
     //    //搜索功能
     api 'com.amap.api:search:latest.integration'
+    implementation 'org.greenrobot:eventbus:3.1.1'
 }
