--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".activity.UserInfoActivity">
+        </activity>
         <activity android:name=".activity.SetupActivity">
         </activity>
         <activity android:name=".activity.DeviceScanActivity">
