--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".activity.ChangeLanguageActivity">
+        </activity>
         <activity android:name=".activity.UserInfoActivity">
         </activity>
         <activity android:name=".activity.SetupActivity">
@@ -41,13 +43,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
-        </activity>
-        <activity
-                android:name=".activity.SettingActivity"
-                android:parentActivityName=".activity.MainActivity">
-            <meta-data
-                    android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".activity.MainActivity"/>
         </activity>
     </application>
 
