--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,20 +11,20 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
 
     <application
-            android:name=".application.BaseApplication"
+            android:name=".app.BaseApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".activity.ChangeLanguageActivity">
+        <activity android:name="cn.jinelei.rainbow.ui.activity.ChangeLanguageActivity">
         </activity>
-        <activity android:name=".activity.UserInfoActivity">
+        <activity android:name="cn.jinelei.rainbow.ui.activity.UserInfoActivity">
         </activity>
-        <activity android:name=".activity.SetupActivity">
+        <activity android:name="cn.jinelei.rainbow.ui.activity.SetupActivity">
         </activity>
-        <activity android:name=".activity.DeviceScanActivity">
+        <activity android:name="cn.jinelei.rainbow.ui.activity.DeviceScanActivity">
         </activity>
 
         <service
@@ -37,7 +37,7 @@
                 android:name="com.amap.api.v2.apikey"
                 android:value="86acb5e297a5c8f39d6c7290fc5a8d4c"/>
 
-        <activity android:name=".activity.MainActivity">
+        <activity android:name="cn.jinelei.rainbow.ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
