--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_CONTACTS"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
 
     <application
             android:name=".app.BaseApp"
@@ -24,7 +26,7 @@
         </activity>
         <activity android:name="cn.jinelei.rainbow.ui.activity.SetupActivity">
         </activity>
-        <activity android:name="cn.jinelei.rainbow.ui.activity.DeviceScanActivity">
+        <activity android:name="cn.jinelei.rainbow.ui.activity.ScanDeviceActivity">
         </activity>
 
         <service
