保存进度，准备清理代码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
+
+    <uses-feature
+            android:name="android.hardware.bluetooth_le"
+            android:required="true"/>
 
     <application
             android:name=".app.BaseApp"
@@ -21,15 +24,17 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name="cn.jinelei.rainbow.ui.activity.ChangeLanguageActivity">
+        <activity android:name=".TestActivity">
         </activity>
-        <activity android:name="cn.jinelei.rainbow.ui.activity.UserInfoActivity">
+        <activity android:name=".ui.activity.ChangeLanguageActivity">
         </activity>
-        <activity android:name="cn.jinelei.rainbow.ui.activity.SetupActivity">
+        <activity android:name=".ui.activity.UserInfoActivity">
         </activity>
-        <activity android:name="cn.jinelei.rainbow.ui.activity.ScanDeviceActivity">
+        <activity android:name=".ui.activity.SetupActivity">
         </activity>
-        <activity android:name="cn.jinelei.rainbow.ui.activity.ScanWifiActivity">
+        <activity android:name=".ui.activity.ScanDeviceActivity">
+        </activity>
+        <activity android:name=".ui.activity.ScanWifiActivity">
         </activity>
 
         <service
@@ -38,6 +43,7 @@
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MainService"/>
+
                 <category android:name="android.intent.category.default"/>
             </intent-filter>
         </service>
@@ -46,7 +52,7 @@
                 android:name="com.amap.api.v2.apikey"
                 android:value="86acb5e297a5c8f39d6c7290fc5a8d4c"/>
 
-        <activity android:name="cn.jinelei.rainbow.ui.activity.MainActivity">
+        <activity android:name=".ui.activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
