--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     api 'com.amap.api:search:latest.integration'
     api 'com.android.support:preference-v7:28.+'
     implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
