--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ ext {
 buildscript {
     ext.kotlin_version = '1.3.31'
     repositories {
+        maven { url 'https://jitpack.io' }
         google()
         jcenter()
         maven { url "https://maven.google.com" }
@@ -17,6 +18,7 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url 'https://jitpack.io' }
         google()
         jcenter()
         maven { url "https://maven.google.com" }
